--- a/neutrones_degenerados.ipynb
+++ b/neutrones_degenerados.ipynb
@@ -87,7 +87,7 @@
     "    return x*np.sqrt(1+x**2)*(2*x**2-3)+3*np.log(x+np.sqrt(1+x**2))\n",
     "\n",
     "# Definimos la presion y densidad de energía en función del parámetro x y la densidad central (rho0 = P0)\n",
-    "def preasure(x, P0):\n",
+    "def pressure(x, P0):\n",
     "    return A*f(x)/P0\n",
     "    \n",
     "def density(x, rho0):\n",
@@ -95,7 +95,7 @@
     "\n",
     "# Definimos la interpolacion de la relacion rho = rho(P)\n",
     "def EoS(rho0, x):\n",
-    "    return CubicSpline(preasure(x, rho0), density(x, rho0))\n",
+    "    return CubicSpline(pressure(x, rho0), density(x, rho0))\n",
     "    \n",
     "# Parámetro para el cual la densidad de masa es 10^15 g/cm^3\n",
     "xmax = ((1e17 * 1e3)/B)**(1/3)\n",
@@ -109,8 +109,8 @@
     "# x = np.linspace(0, 10, 1000) # Arbitrario\n",
     "rho_P = EoS(rho0, x)\n",
     "#siempre chequear que la interpolacion trabaja bien\n",
-    "plt.loglog( preasure(x, rho0),  rho_P(preasure(x, rho0)), \"o\", label=\"interpolation\") #(como son varios ordenes de magnitud es mejor graficar log-log)\n",
-    "plt.loglog( preasure(x, rho0),  density(x, rho0))\n",
+    "plt.loglog( pressure(x, rho0),  rho_P(pressure(x, rho0)), \"o\", label=\"interpolation\") #(como son varios ordenes de magnitud es mejor graficar log-log)\n",
+    "plt.loglog( pressure(x, rho0),  density(x, rho0))\n",
     "\n",
     "plt.legend()\n",
     "plt.xlabel(r'$P/\\rho_0$')\n",
@@ -181,7 +181,7 @@
     "rho0 = density(((1e14 * 1e3)/B)**(1/3), 1) # Densidad central de energía kg/ms^2\n",
     "rho_P = EoS(rho0, x)\n",
     "\n",
-    "P_central = CubicSpline(density(x, rho0), preasure(x, rho0))(1) # Presion obtenida de la ecuacion de estado para rho=1\n",
+    "P_central = CubicSpline(density(x, rho0), pressure(x, rho0))(1) # Presion obtenida de la ecuacion de estado para rho=1\n",
     "rho_P(P_central)"
    ]
   },
@@ -529,7 +529,7 @@
     "    rho_P = EoS(rho0, x)\n",
     "    # def EoS(rho0, x):\n",
     "    # return CubicSpline(preasure(x, rho0), density(x, rho0))\n",
-    "    P_central = CubicSpline(density(x, rho0), preasure(x, rho0))(1) # Presion obtenida de la ecuacion de estado para rho=1\n",
+    "    P_central = CubicSpline(density(x, rho0), pressure(x, rho0))(1) # Presion obtenida de la ecuacion de estado para rho=1\n",
     "    rho_P(P_central)\n",
     "\n",
     "    # Definimos las condiciones iniciales en r = dr (para evitar la singularidad en r = 0)\n",
