fixed signo log en g(x)

--- a/neutrones_degenerados.ipynb
+++ b/neutrones_degenerados.ipynb
@@ -35,7 +35,7 @@
     "$$ \\hat P = A f(x)/P_0, $$\n",
     "$$ \\rho_m = m_n n_n = Bx^3, $$\n",
     "$$ u = A * (8x^3(\\sqrt{x^2+1}-1)-f(x))$$\n",
-    "$$ \\hat \\rho = (c^2\\rho_m + u)/\\rho_0 = \\frac{3A}{\\rho_0}\\left[ x(2x^2+1)\\sqrt{x^2+1} + ln(x+\\sqrt{x^2+1}) \\right]$$\n",
+    "$$ \\hat \\rho = (c^2\\rho_m + u)/\\rho_0 = \\frac{3A}{\\rho_0}\\left[ x(2x^2+1)\\sqrt{x^2+1} - ln(x+\\sqrt{x^2+1}) \\right]$$\n",
     "\n",
     "donde\n",
     "\n",
