correción en el MD sobre parametros

--- a/neutrones_degenerados.ipynb
+++ b/neutrones_degenerados.ipynb
@@ -389,7 +389,7 @@
     "donde tomando las constantes igual a 1, se tiene, en MKS:\n",
     "\n",
     "$$P_0 = \\rho_0$$\n",
-    "$$M = 4 \\pi R^3 \\rho_0$$\n",
+    "$$M = \\frac{4 \\pi R^3 \\rho_0}{c^2}$$\n",
     "$$R^2 = \\frac{c^4}{4 \\pi G \\rho_0}$$\n",
     "\n",
     "Escogiendo la densidad central como la de la estrella, $\\hat \\rho(0) = 1$, $\\hat m(0) = 0$. "
@@ -673,7 +673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
