--- a/NS_Structure/neutrones_degenerados.ipynb
+++ b/NS_Structure/neutrones_degenerados.ipynb
@@ -16,7 +16,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.integrate import odeint\n",
-    "from scipy.interpolate import CubicSpline, interp1d"
+    "from scipy.interpolate import interp1d"
    ]
   },
   {
