--- a/NS_Structure/modelo_sigma-omega.ipynb
+++ b/NS_Structure/modelo_sigma-omega.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1257983940942145e+20 1.8203009702331715e+20\n"
+     ]
+    }
+   ],
    "source": [
     "# Definimos las constantes necesarias en MKS\n",
     "hbar_MKS = 1.0545718e-34 # J s\n",
@@ -76,20 +84,53 @@
     "m_nuc = m_nuc_MKS * (G_MKS/c_MKS**2) # m\n",
     "\n",
     "# Damos valores a las constantes\n",
-    "A_sigma = 1e-7\n",
-    "A_omega = 1e-7"
+    "# A_sigma = 1e-7\n",
+    "# A_omega = 1e-7\n",
+    "A_sigma = np.sqrt(266.9*hbar/m_nuc**2)\n",
+    "A_omega = np.sqrt(195.7*hbar/m_nuc**2)\n",
+    "\n",
+    "print(A_sigma, A_omega)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-1.1774374925082483e+163)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autoconsistencia(x_sigma,A_sigma, 1e47)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_sigma =  1.1891642713564195e-54 para n_barion =  1e+47\n"
+      "x_sigma =  1e-20 para n_barion =  1e+47\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nicom\\AppData\\Local\\Temp\\ipykernel_10164\\4195994425.py:16: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
+      "  improvement from the last ten iterations.\n",
+      "  return fsolve(autoconsistencia, 1e-20, args=(A_sigma, n_barion))[0]\n"
      ]
     }
    ],
@@ -97,14 +138,15 @@
     "# Definimos un algoritmo de solución para la ecuación de autoconsistencia dados n_barion y A_sigma\n",
     "\n",
     "# Primero el integrando\n",
-    "def integrando_x_sigma(p, x_sigma):\n",
-    "    return (m_nuc-x_sigma)*p**2/(p**2 + (m_nuc-x_sigma)**2)\n",
+    "# def integrando_x_sigma(p, x_sigma):\n",
+    "#     return (m_nuc-x_sigma)*p**2/(p**2 + (m_nuc-x_sigma)**2)\n",
     "\n",
     "# Ahora la ecuación de autoconsistencia\n",
     "def autoconsistencia(x_sigma, A_sigma, n_barion):\n",
     "    p_f = (3*pi**2*hbar**3*n_barion/2)**(1/3) # Momento de Fermi en función de n_barion\n",
-    "    integral = quad(integrando_x_sigma, 0, p_f, args=(x_sigma))\n",
-    "    return x_sigma - A_sigma**2*(2/(pi**2*hbar))*integral[0]\n",
+    "    # integral = quad(integrando_x_sigma, 0, p_f, args=(x_sigma))\n",
+    "    integral = -np.sqrt(m_nuc**2+p_f**2-2*m_nuc*x_sigma+x_sigma**2)/(p_f*(m_nuc-x_sigma))\n",
+    "    return x_sigma - A_sigma**2*(2/(pi**2*hbar))*integral\n",
     "\n",
     "# Función para resolver la ecuación de autoconsistencia para un n_barion y A_sigma dados\n",
     "def solucion_x_sigma(n_barion, A_sigma):\n",
@@ -118,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Energía =  221149187689048.7 y presión =  -221149187689048.7 para n_barion =  1e+30\n"
+      "Energía =  1.0361298165940198e+45 y presión =  -1.0361298165940198e+45 para n_barion =  1e+47\n"
      ]
     }
    ],
@@ -157,14 +199,14 @@
     "    return interp1d(presiones, energias), presiones, energias\n",
     "\n",
     "# Ejemplo\n",
-    "n_barion_max = 1e30\n",
+    "n_barion_max = 1e47\n",
     "energia, presion = energia_presion(n_barion_max, A_sigma, A_omega, 1)\n",
     "print(\"Energía = \", energia, \"y presión = \", presion, \"para n_barion = \", n_barion_max)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +235,7 @@
     "\n",
     "# Definimos el rango de densidades barionicas e interpolamos la ecuación de estado\n",
     "n_barion = np.linspace(0, n_barion_max, 100)\n",
+    "# n_barion = np.logspace(0, np.log10(n_barion_max), 100)\n",
     "rho_P, presiones, energias = EoS(n_barion, A_sigma, A_omega, rho_0)\n",
     "\n",
     "# Graficamos la ecuación de estado rho(P)\n",
