--- a/NS_Structure/gas_n-p-e.ipynb
+++ b/NS_Structure/gas_n-p-e.ipynb
@@ -149,10 +149,10 @@
     "    return CubicSpline(pressure(x, rho0), density(x, rho0))\n",
     "\n",
     "# Para hallar el rango de parametros a utilizar, invertimos la función de densidad de masa\n",
-    "# mediante una interpolación, y hallamos el valor xmax para el que la densidad es 10^17 g/cm^3\n",
+    "# mediante una interpolación, y hallamos el valor xmax para el que la densidad es 10^18 g/cm^3\n",
     "xlimit = 10000\n",
     "density_mass_inv = CubicSpline(density_mass(np.linspace(0, xlimit, 3000)), np.linspace(0, xlimit, 3000), extrapolate=False) # x_e = x_e(rho_m)\n",
-    "xmax = density_mass_inv(1e18 * 1e3) # Pasamos de kg/m^3 a g/cm^3\n",
+    "xmax = density_mass_inv(1e18 * 1e3) # Pasamos de g/cm^3 a kg/m^3\n",
     "print(f'xmax = {xmax}')\n",
     "\n",
     "# Ejemplo de ecuación de estado para\n",
