creación carpeta de scripts

--- a/NS_Structure/modelo_sigma-omega.ipynb
+++ b/NS_Structure/modelo_sigma-omega.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "import ResolverTOV as tov\n",
+    "import scripts.ResolverTOV as tov\n",
     "\n",
     "# Definimos la ecuacion de estado para la integración del sistema\n",
     "densidad_masa_max = 1e18*1e3 # g/cm^3 a kg/m^3\n",
