se guardan "tablas" de EoS, primero Sigma Omega base

--- a/NS_Structure/modelo_sigma-omega.ipynb
+++ b/NS_Structure/modelo_sigma-omega.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,22 @@
     "    elif funcion_return == 'energia_inv':\n",
     "        return CubicSpline(energias[presion_cambio:], n_sirve[presion_cambio:]), presiones, energias, n_sirve, presion_cambio\n",
     "    elif funcion_return == 'presion_inv':\n",
-    "        return CubicSpline(presiones[presion_cambio:], n_sirve[presion_cambio:]), presiones, energias, n_sirve, presion_cambio"
+    "        return CubicSpline(presiones[presion_cambio:], n_sirve[presion_cambio:]), presiones, energias, n_sirve, presion_cambio\n",
+    "    \n",
+    "# Calculamos y guardamos una ecuación de estado adimensional\n",
+    "densidad_masa_max = 1e18*1e3 # g/cm^3 a kg/m^3\n",
+    "densidad_masa_min = 1e14*1e3 # g/cm^3 a kg/m^3\n",
+    "n_barions = np.logspace(np.log10(densidad_masa_min/m_nuc_MKS), np.log10(densidad_masa_max/m_nuc_MKS), 200)\n",
+    "lambda_ = m_nuc**4/hbar**3 # Constante de escala empleada\n",
+    "rho_0_lambda = lambda_/2.0 # lambda_/(2*rho_0) = 1\n",
+    "rho_P, presiones, energias, n_sirve, presion_cambio = EoS(n_barions, A_sigma, A_omega, rho_0_lambda, return_presion_cambio=True) # EoS con rho_0 = lambda/2\n",
+    "n_sirve = n_sirve[presion_cambio:]\n",
+    "presiones = presiones[presion_cambio:]\n",
+    "energias = energias[presion_cambio:]\n",
+    "# Guardamos la EoS adimensional\n",
+    "# import pandas as pd\n",
+    "# df = pd.DataFrame({'n': n_sirve, 'P': presiones, 'E': energias})\n",
+    "# df.to_csv('EoS_tables/EoS_adimensional.csv', index=False, float_format='%.15e')"
    ]
   },
   {
@@ -212,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
