calculo del modulo de compresion y energia de simetria

--- a/NS_Structure/sigma-omega_autointeraccion.ipynb
+++ b/NS_Structure/sigma-omega_autointeraccion.ipynb
@@ -76,6 +76,7 @@
     "G_MKS = 6.67430e-11 # m^3/kg/s^2\n",
     "pi = np.pi\n",
     "m_nuc_MKS = 1.6726219e-27 # kg\n",
+    "e_MKS = 1.602186021766e-19 # J\n",
     "\n",
     "# # Definimos las constantes necesarias en unidades geometrizadas\n",
     "hbar = hbar_MKS * (G_MKS/c_MKS**3) # m^2\n",
@@ -91,7 +92,7 @@
     "params = [A_sigma, A_omega, b_, c_]\n",
     "\n",
     "# Calculamos si no hay archivo de la EoS, si no, lo leemos\n",
-    "operacion = 'leer' # 'calc' o 'leer'\n",
+    "operacion = 'calc' # 'calc' o 'leer'\n",
     "\n",
     "if operacion == 'calc':\n",
     "    # Definimos el rango de densidades para la interpolación de la EoS\n",
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,13 +205,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saturacion:  [np.float64(1.0735678391959798e+44), np.float64(-1.0137970506873984e-56)]\n"
+     ]
     }
    ],
    "source": [
     "# Graficamos la energia de enlace por nucleon vs la densidad de bariones\n",
     "# n_prove = np.logspace(-3, -0.5, 200)*1e45 # Densidades de bariones de fm^-3 a m^-3\n",
     "n_prove = np.linspace(1e-3, 0.25, 200)*1e45 # Densidades de bariones de fm^-3 a m^-3\n",
-    "AIEoS.plot_saturacion(n_prove, params)"
+    "saturacion = AIEoS.plot_saturacion(n_prove, params)\n",
+    "print('Saturacion: ', saturacion)"
    ]
   },
   {
@@ -222,10 +231,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modulo de compresion:  160.36876508731268 MeV\n",
+      "Coeficiente de simetria:  20.25945418288865 MeV\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculamos el modulo de compresion y el coeficiente de energía de simetría\n",
+    "K = AIEoS.modulo_compresion(saturacion[0], [A_sigma, A_omega, b_, c_])\n",
+    "print('Modulo de compresion: ', K*c_MKS**4/G_MKS/e_MKS*1e-6, 'MeV')\n",
+    "\n",
+    "a_sym = AIEoS.coeficiente_simetria(0.161e45, [A_sigma, A_omega, 0, 0])\n",
+    "print('Coeficiente de simetria: ', a_sym*c_MKS**4/G_MKS/e_MKS*1e-6, 'MeV')"
+   ]
   }
  ],
  "metadata": {
