Estimación de los parametros usando las propiedades. Primer intento.

--- a/NS_Structure/sigma-omega_autointeraccion.ipynb
+++ b/NS_Structure/sigma-omega_autointeraccion.ipynb
@@ -24,6 +24,7 @@
     "plt.rcParams['font.size'] = 12\n",
     "plt.rcParams['lines.markersize'] = 3\n",
     "from scipy.interpolate import CubicSpline\n",
+    "from scipy.optimize import least_squares\n",
     "\n",
     "import scripts.AutointeractuanteEoS as AIEoS"
    ]
@@ -231,25 +232,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modulo de compresion:  160.36876508731268 MeV\n",
-      "Coeficiente de simetria:  20.25945418288865 MeV\n"
+      "Modulo de compresion: 160.369MeV\n",
+      "Coeficiente de simetria: 12.686MeV\n"
      ]
     }
    ],
    "source": [
     "# Calculamos el modulo de compresion y el coeficiente de energía de simetría\n",
     "K = AIEoS.modulo_compresion(saturacion[0], [A_sigma, A_omega, b_, c_])\n",
-    "print('Modulo de compresion: ', K*c_MKS**4/G_MKS/e_MKS*1e-6, 'MeV')\n",
+    "print(f'Modulo de compresion: {K*c_MKS**4/G_MKS/e_MKS*1e-6:.3f}MeV')\n",
     "\n",
-    "a_sym = AIEoS.coeficiente_simetria(0.161e45, [A_sigma, A_omega, 0, 0])\n",
-    "print('Coeficiente de simetria: ', a_sym*c_MKS**4/G_MKS/e_MKS*1e-6, 'MeV')"
+    "a_sym = AIEoS.coeficiente_simetria(saturacion[0], [A_sigma, A_omega, b_, c_])\n",
+    "print(f'Coeficiente de simetria: {a_sym*c_MKS**4/G_MKS/e_MKS*1e-6:.3f}MeV')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parametros optimos:\n",
+      "A_sigma:330.263\n",
+      "A_omega:249.547\n",
+      "b_:-3.053e-04\n",
+      "c_:2.673e-03\n",
+      "\n",
+      "Propiedades nucleares:\n",
+      "Densidad de saturación: 0.107 fm^-3\n",
+      "Energía de enlace por nucleón: -10.347 MeV\n",
+      "Módulo de compresión: 229.796 MeV\n",
+      "Coeficiente de energía de simetría: 12.733 MeV\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos los valores conocidos de las propiedades nucleares\n",
+    "n_saturacion_0 = 0.161  # Densidad de saturación en fm^-3\n",
+    "binding_energy_0 = -16.24  # Energía de enlace por nucleón en MeV\n",
+    "compression_modulus_0 = 230.0 # Módulo de compresión en MeV\n",
+    "energy_symmetry_coefficient_0 = 31.6 # Coeficiente de energía de simetría en MeV\n",
+    "known_values = np.array([n_saturacion_0, binding_energy_0, compression_modulus_0, energy_symmetry_coefficient_0])\n",
+    "\n",
+    "# Definimos la función objetivo para la optimización\n",
+    "def objective_function(params):\n",
+    "    calculated_values = calculate_properties(params)\n",
+    "    return (calculated_values - known_values)\n",
+    "\n",
+    "# Definimos el punto inicial para la optimización (guessing inicial)\n",
+    "initial_guess = params.copy()\n",
+    "\n",
+    "# Realizamos la optimización\n",
+    "result = least_squares(objective_function, initial_guess)\n",
+    "\n",
+    "# Imprimimos los resultados\n",
+    "optimized_params = result.x\n",
+    "optimized_residuals = result.fun\n",
+    "optimized_properties = calculate_properties(optimized_params)\n",
+    "# Mostramos los parametros optimos y las propiedades nucleares\n",
+    "print(\"Parametros optimos:\")\n",
+    "print(f\"A_sigma:{optimized_params[0]:.3f}\")\n",
+    "print(f\"A_omega:{optimized_params[1]:.3f}\")\n",
+    "print(f\"b_:{optimized_params[2]:.3e}\")\n",
+    "print(f\"c_:{optimized_params[3]:.3e}\")\n",
+    "print(\"\\nPropiedades nucleares:\")\n",
+    "print(f\"Densidad de saturación: {optimized_properties[0]:.3f} fm^-3\")\n",
+    "print(f\"Energía de enlace por nucleón: {optimized_properties[1]:.3f} MeV\")\n",
+    "print(f\"Módulo de compresión: {optimized_properties[2]:.3f} MeV\")\n",
+    "print(f\"Coeficiente de energía de simetría: {optimized_properties[3]:.3f} MeV\")"
    ]
   }
  ],
