Salvado de datos Masa-Radio

--- a/NS_Structure/modelo_sigma-omega.ipynb
+++ b/NS_Structure/modelo_sigma-omega.ipynb
@@ -280,17 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nicom\\Desktop\\CalculosSimulaciones\\NS_Structure\\ResolverTOV.py:163: ODEintWarning: Excess work done on this call (perhaps wrong Dfun type). Run with full_output = 1 to get quantitative information.\n",
-      "  sol = odeint(ecuaciones, [P0, m0, phi0], r, args=(rho_P,)).T\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -338,6 +330,11 @@
     "    if masas[i] > masas[arg_max]:\n",
     "        arg_max = i\n",
     "    # print(\"Se pudo para densidad de masa =\", format(rho_m,\"2.2e\"), \"g/cm^3\")\n",
+    "    \n",
+    "# Guardamos los resultados\n",
+    "# m_sun = 1.989e30 # kg\n",
+    "# df = pd.DataFrame({'Masa': masas/m_sun, 'Radio': radios*1e-3, 'rho_m': rhos_masa})\n",
+    "# df.to_csv('results/MasaRadio_SigmaOmega_rho0_lambda_A_propios.csv', index=False, float_format='%.15e')\n",
     "    \n",
     "# Graficamos la relación masa-radio\n",
     "tov.grafica_masa_radio(radios, masas, rhos_masa)"
