Energia de enlace por nucleon en la comparativa

--- a/NS_Structure/sigma-omega_autointeraccion.ipynb
+++ b/NS_Structure/sigma-omega_autointeraccion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
      "output_type": "stream",
      "text": [
       "La masa efectiva en saturación es: 0.577 m_nuc\n",
-      "Densidad de saturación n_saturacion = 0.158 1/fm^3 y energia de enlace por nucleon en saturación = -16.391 MeV y densidad de energia en saturación = 145.333 MeV/fm^3\n",
+      "Densidad de saturación n_saturacion = 0.158 1/fm^3 ( 2.637e+14 ) y energia de enlace por nucleon en saturación = -16.391 MeV y densidad de energia en saturación = 145.333 MeV/fm^3\n",
       "Presion en la densidad de saturación: 5.506520631892913e+32 Pa\n"
      ]
     },
