importaciones al inicio

--- a/NS_Structure/sigma-omega_autointeraccion.ipynb
+++ b/NS_Structure/sigma-omega_autointeraccion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,9 @@
     "plt.rcParams['font.size'] = 12\n",
     "plt.rcParams['lines.markersize'] = 3\n",
     "from scipy.interpolate import CubicSpline\n",
-    "from scipy.optimize import least_squares\n",
     "\n",
-    "import scripts.AutointeractuanteEoS as AIEoS"
+    "import scripts.AutointeractuanteEoS as AIEoS\n",
+    "import scripts.ResolverTOV as tov"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -153,8 +153,6 @@
     }
    ],
    "source": [
-    "import scripts.ResolverTOV as tov\n",
-    "\n",
     "# Si la variable presion_cambio no es false, redefinimos los arrays\n",
     "if presion_cambio:\n",
     "    # Definimos la densidad de bariones y la presión para la integración del sistema\n",
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
