Implementacion de la expresion calculada para el modulo de compresion

--- a/NS_Structure/sigma-omega-rho.ipynb
+++ b/NS_Structure/sigma-omega-rho.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f3d89cf4",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
     "lambda_ = m_nuc**4 # Constante de escala empleada\n",
     "rho_0_lambda = lambda_/2 # Escala de energía y presión empleada\n",
     "\n",
-    "# Damos valores a las constantes (Glendenning K=250 m*=0.7) (constantes tilde cuadradas)\n",
+    "# Damos valores a las constantes (Glendenning K=250 m*/m=0.7) (constantes tilde cuadradas)\n",
     "A_sigma = 12.230*m_nuc**2 # Walecka: 266.9, 357.4\n",
     "A_omega =  7.148*m_nuc**2 # Walecka: 195.7, 273.8\n",
     "A_rho   =  4.410*m_nuc**2 # Nuevo parámetro para el campo rho\n",
@@ -118,7 +118,7 @@
     "params = [A_sigma, A_omega, A_rho, b, c, t]\n",
     "\n",
     "# Calculamos si no hay archivo de la EoS, si no, lo leemos\n",
-    "operacion = 'calc' # 'calc' o 'leer'\n",
+    "operacion = 'leer' # 'calc' o 'leer'\n",
     "\n",
     "if operacion == 'calc':\n",
     "    # Definimos el rango de densidades para la interpolación de la EoS\n",
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "43a24ce7",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "4842627e",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "ae217205",
    "metadata": {},
    "outputs": [
@@ -392,8 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modulo de compresion: -1203.5213 MeV\n",
-      "Coeficiente de simetria: 22.2128 MeV\n"
+      "Modulo de compresion: 100.1570 MeV\n",
+      "Coeficiente de simetria: 27.9032 MeV\n"
      ]
     }
    ],
