--- a/NS_Structure/sigma-omega_autointeraccion.ipynb
+++ b/NS_Structure/sigma-omega_autointeraccion.ipynb
@@ -589,7 +589,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tesis",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -603,9 +603,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
