Añade secciones sobre notación y convenciones, y mejora la redacción en los capítulos sobre estrellas de neutrones y relatividad general.

--- a/Libro_Trabajo_de_Grado/PropuestadeTesis.bib
+++ b/Libro_Trabajo_de_Grado/PropuestadeTesis.bib
@@ -75,6 +75,20 @@
   author = {Baade, W. and Zwicky, F.}
 }
 
+@article{biswasGW190814PropertiesSecondary2021,
+  title = {{{GW190814}}: On the Properties of the Secondary Component of the Binary},
+  shorttitle = {{{GW190814}}},
+  year = {2021},
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {505},
+  number = {2},
+  pages = {1600--1606},
+  doi = {10.1093/mnras/stab1383},
+  copyright = {https://academic.oup.com/journals/pages/open\_access/funder\_policies/chorus/standard\_publication\_model},
+  langid = {english},
+  author = {Biswas, Bhaskar and Nandi, Rana and Char, Prasanta and Bose, Sukanta and others}
+}
+
 @article{bogutaRelativisticCalculationNuclear1977,
   title = {Relativistic Calculation of Nuclear Matter and the Nuclear Surface},
   year = {1977},
@@ -122,18 +136,6 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics,Nuclear Theory},
   author = {Choudhury, Devarshi and Salmi, Tuomo and Vinciguerra, Serena and Riley, Thomas E. and others}
-}
-
-@article{chowPM10SourceApportionment1992,
-  title = {{{PM10}} Source Apportionment in {{California}}'s {{San Joaquin}} Valley},
-  year = {1992},
-  journal = {Atmospheric Environment. Part A. General Topics},
-  volume = {26},
-  number = {18},
-  pages = {3335--3354},
-  doi = {10.1016/0960-1686(92)90350-T},
-  langid = {english},
-  author = {Chow, Judith C. and Watson, John G. and Lowenthal, Douglas H. and Solomon, Paul A. and others}
 }
 
 @misc{collaborationGWTC21DeepExtended2022,
@@ -195,16 +197,6 @@
   doi = {10.1103/PhysRevLett.126.162701},
   langid = {english},
   author = {Estee, J. and Lynch, W. G. and Tsang, C. Y. and Barney, J. and others}
-}
-
-@article{fanSpatioTemporalVariationsPM252021,
-  title = {Spatio-{{Temporal Variations}} of the {{PM2}}.5/{{PM10 Ratios}} and {{Its Application}} to {{Air Pollution Type Classification}} in {{China}}},
-  year = {2021},
-  journal = {Front. Environ. Sci.},
-  volume = {9},
-  pages = {692440},
-  doi = {10.3389/fenvs.2021.692440},
-  author = {Fan, Hao and Zhao, Chuanfeng and Yang, Yikun and Yang, Xingchuan and others}
 }
 
 @article{fonsecaNANOGravNineyearData2016,
@@ -282,18 +274,6 @@
   author = {Guo, Ling-Jun and Ma, Yao and Ma, Yong-Liang and Wu, Ruo-Xi and others}
 }
 
-@article{harrisonSourcesProcessesAffecting1997,
-  title = {Sources and Processes Affecting Concentrations of {{PM10}} and {{PM2}}.5 Particulate Matter in {{Birmingham}} ({{U}}.{{K}}.)},
-  year = {1997},
-  journal = {Atmospheric Environment},
-  volume = {31},
-  number = {24},
-  pages = {4103--4117},
-  doi = {10.1016/S1352-2310(97)00296-3},
-  langid = {english},
-  author = {Harrison, Roy M. and Deacon, Andrew R. and Jones, Marcus R. and Appleby, Robert S. and others}
-}
-
 @misc{horvathBirthEventsMasses2020,
   title = {Birth Events, Masses and the Maximum Mass of {{Compact Stars}}},
   year = {2020},
@@ -332,16 +312,17 @@
   author = {Kumar, Rajesh and Dexheimer, Veronica and Jahan, Johannes and Noronha, Jorge and others}
 }
 
-@article{landriganAirPollutionHealth2017,
-  title = {Air Pollution and Health},
-  year = {2017},
-  journal = {The Lancet Public Health},
-  volume = {2},
+@article{lalazissisNewParametrizationLagrangian1997,
+  title = {New Parametrization for the {{Lagrangian}} Density of Relativistic Mean Field Theory},
+  year = {1997},
+  journal = {Phys. Rev. C},
+  volume = {55},
   number = {1},
-  pages = {e4-e5},
-  doi = {10.1016/S2468-2667(16)30023-8},
+  pages = {540--543},
+  doi = {10.1103/PhysRevC.55.540},
+  copyright = {http://link.aps.org/licenses/aps-default-license},
   langid = {english},
-  author = {Landrigan, Philip J}
+  author = {Lalazissis, G. A. and K{\"o}nig, J. and Ring, P.}
 }
 
 @article{liUnderstandingAstrophysicalEffects2019,
@@ -367,21 +348,6 @@
   author = {Lopes, Luiz L. and Menezes, Debora P.}
 }
 
-@article{lopesRoleSymmetryEnergy2024,
-  title = {Role of the Symmetry Energy Slope in Neutron Stars: Exploring the Model-Dependency},
-  shorttitle = {Role of the Symmetry Energy Slope in Neutron Stars},
-  year = {2024},
-  journal = {Phys. Rev. C},
-  volume = {110},
-  number = {1},
-  eprint = {2406.10755},
-  pages = {015805},
-  doi = {10.1103/PhysRevC.110.015805},
-  archiveprefix = {arXiv},
-  keywords = {High Energy Physics - Phenomenology,Nuclear Theory},
-  author = {Lopes, Luiz L.}
-}
-
 @article{lopesRoleSymmetryEnergy2024a,
   title = {Role of the Symmetry Energy Slope in Neutron Stars: {{Exploring}} the Model Dependency},
   shorttitle = {Role of the Symmetry Energy Slope in Neutron Stars},
@@ -393,17 +359,6 @@
   doi = {10.1103/PhysRevC.110.015805},
   langid = {english},
   author = {Lopes, Luiz L.}
-}
-
-@article{luSystematicReviewMetaanalysis2015,
-  title = {Systematic Review and Meta-Analysis of the Adverse Health Effects of Ambient {{PM2}}.5 and {{PM10}} Pollution in the {{Chinese}} Population},
-  year = {2015},
-  journal = {Environmental Research},
-  volume = {136},
-  pages = {196--204},
-  doi = {10.1016/j.envres.2014.06.029},
-  langid = {english},
-  author = {Lu, Feng and Xu, Dongqun and Cheng, Yibin and Dong, Shaoxia and others}
 }
 
 @article{millerPSRJ0030+0451Mass2019,
@@ -440,18 +395,6 @@
   keywords = {Astrophysics,General relativity (Physics),Gravitation},
   annotation = {OCLC: on1006427790},
   author = {Misner, Charles W. and Thorne, Kip S. and Wheeler, John Archibald and Kaiser, David and others}
-}
-
-@misc{mohantyImpactAnisotropyNeutron2024,
-  title = {The {{Impact}} of {{Anisotropy}} on {{Neutron Star Properties}}: {{Insights}} from {{I-f-C Universal Relations}}},
-  shorttitle = {The {{Impact}} of {{Anisotropy}} on {{Neutron Star Properties}}},
-  year = {2024},
-  number = {arXiv:2305.15724},
-  eprint = {2305.15724},
-  publisher = {arXiv},
-  archiveprefix = {arXiv},
-  keywords = {Nuclear Theory},
-  author = {Mohanty, Sailesh Ranjan and Ghosh, Sayantan and Routaray, Pinku and Das, H. C. and others}
 }
 
 @article{oliinychenkoSensitivityAuAu2023,
@@ -513,20 +456,6 @@
   pages = {609460},
   doi = {10.3389/fspas.2020.609460},
   author = {Pian, Elena}
-}
-
-@article{raaijmakersConstrainingDenseMatter2020,
-  title = {Constraining the Dense Matter Equation of State with Joint Analysis of {{NICER}} and {{LIGO}}/{{Virgo}} Measurements},
-  year = {2020},
-  journal = {ApJL},
-  volume = {893},
-  number = {1},
-  eprint = {1912.11031},
-  pages = {L21},
-  doi = {10.3847/2041-8213/ab822f},
-  archiveprefix = {arXiv},
-  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Nuclear Theory},
-  author = {Raaijmakers, G. and Greif, S. K. and Riley, T. E. and Hinderer, T. and others}
 }
 
 @article{raaijmakersConstraintsDenseMatter2021,
@@ -604,20 +533,6 @@
   author = {Schwarzschild, K.}
 }
 
-@article{shaoNeutronStarBlack2022,
-  title = {On the {{Neutron Star}}/{{Black Hole Mass Gap}} and {{Black Hole Searches}}},
-  year = {2022},
-  journal = {Res. Astron. Astrophys.},
-  volume = {22},
-  number = {12},
-  eprint = {2210.00425},
-  pages = {122002},
-  doi = {10.1088/1674-4527/ac995e},
-  archiveprefix = {arXiv},
-  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics},
-  author = {Shao, Yong}
-}
-
 @article{shaoNeutronStarBlack2022a,
   title = {On the {{Neutron Star}}/{{Black Hole Mass Gap}} and {{Black Hole Searches}}},
   year = {2022},
@@ -683,27 +598,16 @@
   author = {The LIGO Scientific Collaboration and {\noopsort{virgo collaboration}}{the Virgo Collaboration} and Abbott, R. and Abbott, T. D. and others}
 }
 
-@article{tianRadiativeAbsorptionEnhancement2018,
-  title = {Radiative Absorption Enhancement of Dust Mixed with Anthropogenic Pollution over {{East Asia}}},
-  year = {2018},
-  journal = {Atmos. Chem. Phys.},
-  volume = {18},
-  number = {11},
-  pages = {7815--7825},
-  doi = {10.5194/acp-18-7815-2018},
-  langid = {english},
-  author = {Tian, Pengfei and Zhang, Lei and Ma, Jianmin and Tang, Kai and others}
-}
-
-@article{tuckerOverviewPM25Sources2000,
-  title = {An Overview of {{PM2}}.5 Sources and Control Strategies},
-  year = {2000},
-  journal = {Fuel Processing Technology},
-  volume = {65--66},
-  pages = {379--392},
-  doi = {10.1016/S0378-3820(99)00105-8},
-  langid = {english},
-  author = {Tucker, W.Gene}
+@misc{vollickMeaningVariousMass2021,
+  title = {On the {{Meaning}} of {{Various Mass Definitions}} for {{Asymptotically Flat Spacetimes}}},
+  year = {2021},
+  number = {arXiv:2101.12570},
+  eprint = {2101.12570},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2101.12570},
+  archiveprefix = {arXiv},
+  keywords = {General Relativity and Quantum Cosmology},
+  author = {Vollick, Dan N.}
 }
 
 @incollection{waleckaRelativisticNuclearManyBody1986,
@@ -742,18 +646,6 @@
   copyright = {https://www.cambridge.org/core/terms},
   isbn = {978-0-521-67053-1 978-0-521-55001-7 978-1-139-64416-7},
   author = {Weinberg, Steven}
-}
-
-@article{xuSpatialTemporalVariability2017,
-  title = {Spatial and {{Temporal Variability}} of the {{PM2}}.5/{{PM10 Ratio}} in {{Wuhan}}, {{Central China}}},
-  year = {2017},
-  journal = {Aerosol Air Qual. Res.},
-  volume = {17},
-  number = {3},
-  pages = {741--751},
-  doi = {10.4209/aaqr.2016.09.0406},
-  langid = {english},
-  author = {Xu, Gang and Jiao, Limin and Zhang, Boen and Zhao, Suli and others}
 }
 
 @preamble{ "\providecommand{\noopsort}[1]{} " }
