Expande la descripción de la masa en la sección de relatividad general. Mejora las citas múltiples.

--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -33,7 +33,7 @@
 %\usepackage{natbib}
 %\usepackage[square,sort,comma,numbers]{natbib} %Para ver solo números
 %\usepackage[square,sort,comma]{natbib}
-\usepackage[style=ieee, backend=biber, maxnames=2]{biblatex}
+\usepackage[style=ieee, backend=biber, maxnames=2, citestyle=numeric-comp]{biblatex}
 \addbibresource{PropuestadeTesis.bib}
 \setlength{\parindent}{0pt} %Quitar indentación
 \decimalpoint
