Inicia capitulo de Microfísica con ecuaciones de estado, ejemplos y descripción de teoría relativista de campo medio y simetrias.

--- a/Libro_Trabajo_de_Grado/PropuestadeTesis.bib
+++ b/Libro_Trabajo_de_Grado/PropuestadeTesis.bib
@@ -102,6 +102,18 @@
   author = {Boguta, J. and Bodmer, A.R.}
 }
 
+@book{chandrasekharIntroductionStudyStellar1970,
+  title = {An Introduction to the Study of Stellar Structure},
+  year = {1970},
+  series = {Dover Books on Astronomy},
+  edition = {Unabr. and corr. republ. of orig. publ. 1939 by Univ. of Chicago Pr},
+  publisher = {Dover Publ},
+  address = {New York},
+  isbn = {978-0-486-60413-8},
+  langid = {english},
+  author = {Chandrasekhar, Subrahmanyan}
+}
+
 @misc{chatziioannouNeutronStarsDense2024,
   title = {Neutron Stars and the Dense Matter Equation of State: From Microscopic Theory to Macroscopic Observations},
   shorttitle = {Neutron Stars and the Dense Matter Equation of State},
