--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -61,6 +61,9 @@
 \setlength\cftbeforeloftitleskip{1cm}
 \setlength\cftbeforelottitleskip{1cm}
 
+% Atajos para escribir más rapido
+\newcommand{\sistemaTOV}{\ref{eq:masa} - \ref{eq:tov}}
+\newcommand{\masasol}{\,\text{M}_\odot}
 
 % Reiniciar el contador de ecuaciones al principio de cada subsección -------------------------
 
@@ -173,6 +176,8 @@
 
 % Tabla de contenido
 \pagestyle{empty}
+\vspace{0px}
+\pdfbookmark{Contenido}{toc}
 \tableofcontents
 
 
