--- a/Libro_Trabajo_de_Grado/Tesis.bib
+++ b/Libro_Trabajo_de_Grado/Tesis.bib
@@ -312,6 +312,19 @@
   author = {Huang, Chun and Raaijmakers, Geert and Watts, Anna L and Tolos, Laura and others}
 }
 
+@article{khanConstrainingNuclearEquation2012,
+  title = {Constraining the {{Nuclear Equation}} of {{State}} at {{Subsaturation Densities}}},
+  year = {2012},
+  journal = {Phys. Rev. Lett.},
+  volume = {109},
+  number = {9},
+  pages = {092501},
+  doi = {10.1103/PhysRevLett.109.092501},
+  copyright = {http://link.aps.org/licenses/aps-default-license},
+  langid = {english},
+  author = {Khan, E. and Margueron, J. and Vida{\~n}a, I.}
+}
+
 @article{kumarTheoreticalExperimentalConstraints2024,
   title = {Theoretical and Experimental Constraints for the Equation of State of Dense and Hot Matter},
   year = {2024},
@@ -338,6 +351,18 @@
 }
 
 @article{liUnderstandingAstrophysicalEffects2019,
+  title = {Towards Understanding Astrophysical Effects of Nuclear Symmetry Energy},
+  year = {2019},
+  journal = {Eur. Phys. J. A},
+  volume = {55},
+  number = {7},
+  pages = {117},
+  doi = {10.1140/epja/i2019-12780-8},
+  langid = {english},
+  author = {Li, Bao-An and Krastev, Plamen G. and Wen, De-Hua and Zhang, Nai-Bo and others}
+}
+
+@article{liUnderstandingAstrophysicalEffects2019a,
   title = {Towards Understanding Astrophysical Effects of Nuclear Symmetry Energy},
   year = {2019},
   journal = {Eur. Phys. J. A},
@@ -407,6 +432,19 @@
   keywords = {Astrophysics,General relativity (Physics),Gravitation},
   annotation = {OCLC: on1006427790},
   author = {Misner, Charles W. and Thorne, Kip S. and Wheeler, John Archibald and Kaiser, David and others}
+}
+
+@article{myersNuclearPropertiesAccording1996,
+  title = {Nuclear Properties According to the {{Thomas-Fermi}} Model},
+  year = {1996},
+  journal = {Nuclear Physics A},
+  volume = {601},
+  number = {2},
+  pages = {141--167},
+  doi = {10.1016/0375-9474(95)00509-9},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english},
+  author = {Myers, W.D. and Swiatecki, W.J.}
 }
 
 @article{oliinychenkoSensitivityAuAu2023,
